test/kyverno-chainsaw/resources/services/kube-prometheus-stack-operator.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-namespace: monitoring
  labels:
    app: kube-prometheus-stack-operator
  name: kube-prometheus-stack-operator
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: kube-prometheus-stack-operator
    release: kube-prometheus-stack
  sessionAffinity: None
  type: ClusterIP
